<resources>
    <string name="app_name">katana</string>
    <string name="email">email</string>
    <string name="sell">Sell</string>
    <string name="sign_up">sign up</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="noaccount">No account?</string>
    <string name="termsnotice">By clicking on sign up, you agree to our</string>
    <string name="termsandprivacy"><a href="https://www.google.com">Terms of Service</a>  &amp;  <a href="https://www.google.com">Privacy Policy</a></string>
    <string name="category">Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_application_id">944230369077448</string>
    <string name="fb_login_protocol_scheme">fb944230369077448</string>
    <string name="category_name">Category name</string>
    <string name="categories">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="enterCategoryName">A group name for some products</string>
    <string name="add">Add</string>
    <string name="addSuccessful">\s added successfully</string>
    <string name="categoriesList">Product categories</string>
    <string name="title_activity_main">Katana</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_products">Products</string>
    <string name="products">Products</string>
    <string name="productsDesc">View or add categories and products</string>
    <string name="productAddSuccessful">Product successfully added!</string>
    <string name="productAddFailed">Sorry. Could not add the product</string>
    <string name="saleItems">Sales</string>
    <string name="salesDesc">Record saleItems</string>
    <string name="customersDesc">View or add customer information</string>
    <string name="customers">Customers</string>
    <string name="reports">Reports</string>
    <string name="reportsDesc">View reports</string>
    <string name="Settings">Settings</string>
    <string name="SettingsDesc">Customize Melanie</string>
    <string name="addProducts">Add Products</string>
    <string name="viewProducts">View Products</string>
    <string name="title_activity_add_product">Stock up</string>
    <string name="selectCategory">Select category:</string>
    <string name="productName">Product name:</string>
    <string name="Quantity">Quantity:</string>
    <string name="Price">Price:</string>
    <string name="productNameHint">Eg. Only the polished skeleton</string>
    <string name="productQuantityHint">0</string>
    <string name="amountZeroes">0.00</string>
    <string name="bluetoothNotSupported">Bluetooth is not supported on this device</string>
    <string name="printerNotFound">Printer cannot be found. Make sure the printer is turned on and in discovery mode</string>
    <string name="printPreparing">Preparing to print</string>
    <string name="printing">Printing barcodes</string>
    <string name="printingComplete">Printing complete</string>
    <string name="tapeFeedRequired">Please insert new catridge</string>
    <string name="cancel">Cancel</string>
    <string name="waitingForPrint">Printing&#8230;</string>
    <string name="title_activity_scan_barcode">Scan Barcode</string>
    <string name="title_activity_sales">Sales</string>
    <string name="title_activity_customers">Customer information</string>
    <string name="title_activity_reports">Reports</string>
    <string name="doneText">Done</string>
    <string name="lastScan">last scan:</string>
    <string name="zeros">0000000000000</string>
    <string name="name">Name</string>
    <string name="qty">Qty: </string>
    <string name="each">Each</string>
    <string name="total">Total: </string>
    <string name="totalWithColon">Total:</string>
    <string name="alreadyPaid">Already paid:</string>
    <string name="discountLabel">Discount:</string>
    <string name="amountReceived">Amount received:</string>
    <string name="balance">Balance due:</string>
    <string name="save">Save</string>
    <string name="scanBarcode">scan</string>
    <string name="salesSuccess">Sales successfully recorded!</string>
    <string name="salesFailed">Sorry, could not save saleItems. Please try again</string>
    <string name="phoneHint">+1 111 111 1111</string>
    <string name="customerNameHint">Countee Cullen</string>
    <string name="nameWithColon">Name:</string>
    <string name="addCustomerFailed">Sorry. Could not add the customer. Please try again</string>
    <string name="addCustomerSuccess">Customer saved successfully!</string>
    <string name="melanie_payment">Payment</string>
    <string name="customerName">Customer name:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="creditSaleAlertTitle">Credit Sale</string>
    <string name="creditSaleAlertMessage">Amount received not enough. Would you like to record this sale for a customer?</string>
    <string name="paymentSuccess">Payment successfully recorded!</string>
    <string name="paymentFailed">Could not record payment</string>
    <string name="clear">Clear</string>
    <string name="melanie_inventory">Inventory</string>
    <string name="amountDue">Due</string>
    <string name="phoneNumberHeader">Phone</string>
    <string name="title_activity_customer_list">List of Customers</string>
    <string name="showItemsIn">Show items in</string>
    <string name="title_activity_sales_report">Sales report</string>
    <string name="addcategorydescription">Add, view or modify categories</string>
    <string name="addproductdescription">Add a new product</string>
    <string name="inventoryDescription">View inventory, retrieve barcodes</string>
    <string name="doublearrow">&#187;</string>
    <string name="title_activity_customer_main">Customers</string>
    <string name="customerlist">Customer list</string>
    <string name="customersdescription">Add new or modify existing customer</string>
    <string name="customerlistdescription">View customers&#8217; details</string>
    <string name="paymentdescription">Record payment for customer</string>
    <string name="startDate">Start inventoryDate:</string>
    <string name="endDate">End inventoryDate:</string>
    <string name="pickDate">Pick a inventoryDate</string>
    <string name="startDateError">The start inventoryDate must be a inventoryDate equal to or before the end inventoryDate</string>
    <string name="endDateError">The end inventoryDate must be a inventoryDate equal to or after the start inventoryDate</string>
    <string name="title_activity_view_sales">View saleItems</string>
    <string name="title_activity_monthly_sales_report">Monthly saleItems report</string>
    <string name="title_activity_select_printer">Select printer</string>
    <string name="month">Month</string>
    <string name="totalSold">Total sold</string>
    <string name="Date">Date</string>
    <string name="signup">Sign up</string>
    <string name="signupUnderlined"><u>Sign up</u></string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm password:</string>
    <string name="phone">Phone:</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="createAccount">Create account</string>
    <string name="createAccountFailed">Error creating account. Please ensure that you have a stable internet connection and try again</string>
    <string name="createAccountSuccess">Account successfully created!</string>
    <string name="title_activity_confirm">Confirm phone number</string>
    <string name="enterConfirmDigits">Enter the digits received via sms</string>
    <string name="confirm">Confirm</string>
    <string name="phoneNumberHint">Please begin with +country code</string>
    <string name="mustbeLoggedIn">You are not logged in. Trying to log you in now. Make sure you have internet connection.</string>
    <string name="enterPhone">Type in your phone number below</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">login</string>
    <string name="accountLookupFailed">No user exists with this number in the system</string>
    <string name="accountExistForOtherDevice">An account has already been set up on a different device. Would you like to set it up for this device instead?</string>
    <string name="differentDevices">Different Devices</string>
    <string name="loginFailed">Login failed</string>
    <string name="pleaseWait">Please wait&#8230;</string>
    <string name="confirmNumber">Confirm phone number</string>
    <string name="confirmNumberQuestion">An sms with your confirmation code will be sent to the phone number provided. Do you want to continue?</string>
    <string name="sendConfirmCode">Send confirmation code</string>
    <string name="accessDenied">Cannot have multiple devices per account. Use existing device or update to current</string>
    <string name="dontHaveAccount">Don&#8217;t have an account?</string>
    <string name="printBarcodeCheck">Print barcodes</string>
    <string name="accountExistForPhone">An account already exists for this phone number. Please enter a different phone number</string>
    <string name="allCategories">All categories</string>
    <string name="editProduct">Edit product</string>
    <string name="printBarcode">Print barcode</string>
    <string name="shareBarcodeImage">Share barcode image</string>
    <string name="productUpdateSucessfull">Product successfully updated!</string>
    <string name="costs">Costs</string>
    <string name="costsDescription">Record costs</string>
    <string name="title_activity_record_costs">Costs</string>
    <string name="addCostItem">Add cost item</string>
    <string name="costHint">Eg. Transportation</string>
    <string name="costItem">Cost item</string>
    <string name="value">Value</string>
    <string name="costsSavedSuccessfully">Costs saved successfully!</string>
    <string name="saveCostsfailed">save costs failed</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="editSaleQty">Change quantity</string>
    <string name="delete">Delete</string>
    <string name="dailySales">Daily saleItems</string>
    <string name="monthlySales">Monthly saleItems</string>
    <string name="dailySalesDescription">View daily saleItems</string>
    <string name="monthlySalesDescription">View monthly saleItems</string>
    <string name="day">Day</string>
    <string name="bar">Bar</string>
    <string name="line">Line</string>
    <string name="filterByUser">Filter by user</string>
    <string name="confirmation_failed">Confirmation failed. Please try again</string>
    <string name="printerDiscovered">printer discovered</string>
    <string name="printerRemoved">printer removed</string>
    <string name="printerdiscovering">discovering printer</string>
    <string name="printerResourcesCleared">Printer cleared</string>
    <string name="bluetoothNotEnabled">Bluetooth is not enabled</string>
    <string name="couldnotDiscoverPrinter">Could not discover printer</string>
    <string name="initializingPrinter">Initializing Printer</string>
    <string name="add_product">Add Product</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="system">System</string>
    <string name="emptyBagMessage">Shopping bag is empty. Press scan to add items</string>
    <string name="noItems">There are no items</string>
    <string name="unitsremaining">units remaining</string>
    <string name="nocustomers">You have no customers. Click plus to add a customer</string>
    <string name="due">Due:</string>
    <string name="search">find customer</string>
</resources>
