<FrameLayout android:id="@+id/scannerMainView"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:baselineAligned="false"
             android:clipChildren="true"
             android:orientation="vertical"
             android:padding="2dp"
             tools:context="com.katana.ui.views.activities.ScanBarcodeActivity">

    <SurfaceView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:id="@+id/scannedBarcodeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        tools:ignore="all">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/lastScan"
            android:textColor="@color/scannerGreen"
            />

        <TextView
            android:id="@+id/barcodeDigitsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/scannerGreen"
            android:text="@string/zeros"/>
    </LinearLayout>

    <View
        android:id="@+id/redlineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/scannerRed"/>

    <ImageButton
        android:id="@+id/button_done"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="@string/doneText"
        android:src="@drawable/ic_done"
        android:layout_marginBottom="3dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/rounded_ripple"
        android:layout_gravity="bottom|center_horizontal"
        android:baselineAlignBottom="true"/>
</FrameLayout>