<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.katana.ui.viewmodels.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fullscreencolor"
        android:fillViewport="true"
        tools:context="com.katana.ui.views.SignUpActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_default_padding">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_gym"
                app:layout_constraintBaseline_toBaselineOf="@id/katana"
                app:layout_constraintBottom_toTopOf="@id/usernameLayout"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/katana"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/katana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name"
                android:textColor="@color/appNameColor"
                android:textSize="@dimen/app_name_size"
                app:layout_constraintBottom_toTopOf="@+id/usernameLayout"
                app:layout_constraintLeft_toRightOf="@id/logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LabelLightTheme"
                app:layout_constraintBottom_toTopOf="@id/emailLayout"
                app:layout_constraintTop_toBottomOf="@id/katana">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:hint="@string/user_name"
                    android:text="@={viewmodel.userName}"
                    android:textColor="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LabelLightTheme"
                app:layout_constraintBottom_toTopOf="@id/phoneLayout"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_email_white_24dp"
                    android:hint="@string/email"
                    android:text="@={viewmodel.email}"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LabelLightTheme"
                app:layout_constraintBottom_toTopOf="@id/passwordLayout"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_smartphone_white_24dp"
                    android:hint="@string/phone"
                    android:text="@={viewmodel.phone}"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LabelLightTheme"
                app:layout_constraintBottom_toTopOf="@id/signupButton"
                app:layout_constraintTop_toBottomOf="@id/phoneLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:hint="@string/password"
                    android:text="@={viewmodel.password}"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signupButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appNameColor"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/alreadyText"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                android:onClick="@{() -> viewmodel.onSignupRequested()}"
                />

            <TextView
                android:id="@+id/alreadyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/alreadyhaveaccount"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/termsNoticeText"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/loginButton"
                app:layout_constraintTop_toBottomOf="@id/signupButton" />

            <Button
                android:id="@+id/loginButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left|center"
                android:minWidth="0dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/termsNoticeText"
                app:layout_constraintLeft_toRightOf="@id/alreadyText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupButton" />

            <TextView
                android:id="@+id/termsNoticeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termsnotice"
                app:layout_constraintBottom_toTopOf="@id/termAndPrivacyText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alreadyText" />

            <TextView
                android:id="@+id/termAndPrivacyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/termsandprivacy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>


