<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fullscreencolor"
    android:fillViewport="true"
    tools:context="com.katana.ui.SignInActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_gym"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/katana"
            app:layout_constraintBaseline_toBaselineOf="@id/katana"
            app:layout_constraintBottom_toTopOf="@id/usernameLayout"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/katana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="@color/appNameColor"
            android:textSize="@dimen/app_name_size"
            app:layout_constraintBottom_toTopOf="@+id/usernameLayout"
            app:layout_constraintLeft_toRightOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LabelLightTheme"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/katana">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/user_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LabelLightTheme"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appNameColor"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintBottom_toTopOf="@id/noAccount"
            />
        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/signupButton"
            android:layout_marginBottom="200dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            />
        <Button
            android:id="@+id/signupButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_up"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintLeft_toRightOf="@id/noAccount"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/noAccount">

        </Button>
    </android.support.constraint.ConstraintLayout>
</ScrollView>

