<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.katana.ui.viewmodels.AddCustomerViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/katanaCardBackground"
        tools:context="com.katana.ui.views.fragments.AddCustomerFragment"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LabelDarkTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phone_layout"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.1"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/katanaTextColor"
                android:drawableLeft="@drawable/ic_person"
                android:hint="@string/name"
                android:text="@={viewmodel.name}"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LabelDarkTheme"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            app:layout_constraintBottom_toTopOf="@id/add_customer">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/katanaTextColor"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/phone"
                android:text="@={viewmodel.phone}"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/phone_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> viewmodel.saveCustomer()}"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
